Fix alignement issue on alignleft pullquote

--- a/assets/css/ie.css
+++ b/assets/css/ie.css
@@ -3435,6 +3435,11 @@ p.has-text-color a {
 	background: none;
 }
 
+.wp-block-pullquote.alignleft:before,
+.wp-block-pullquote.alignleft cite {
+	text-align: center;
+}
+
 .wp-block-pullquote.alignwide > p {
 	max-width: calc(100vw - 30px);
 }
