--- a/assets/sass/05-blocks/pullquote/_style.scss
+++ b/assets/sass/05-blocks/pullquote/_style.scss
@@ -51,6 +51,13 @@
 		background: none;
 	}
 
+	&.alignleft {
+		&:before,
+		cite {
+			text-align: center;
+		}
+	}
+
 	&.alignwide > p,
 	&.alignwide blockquote {
 		max-width: var(--responsive--alignwide-width);
