--- a/style-rtl.css
+++ b/style-rtl.css
@@ -2430,6 +2430,11 @@ p.has-text-color a {
 	background: none;
 }
 
+.wp-block-pullquote.alignleft:before,
+.wp-block-pullquote.alignleft cite {
+	text-align: center;
+}
+
 .wp-block-pullquote.alignwide > p,
 .wp-block-pullquote.alignwide blockquote {
 	max-width: var(--responsive--alignwide-width);
